Epic 2 implementation
